--- a/estate_nursery/views/batch_report.xml
+++ b/estate_nursery/views/batch_report.xml
@@ -5,9 +5,27 @@
         <template id="report_batch_document">
             <t t-call="report.external_layout">
                 <div class="page">
-                    <div class="row">
-                    <h3>Batch report</h3>
-                </div>
+                        <h2 colors="black" >
+                            <span t-if="o.state == 'done'">Batch Information</span>
+                        </h2>
+                                <div class="row">
+                                    <div class="col-xs-5" t-if="o.state == 'done'">
+                                        <strong>Received Date: <p t-field="o.name"/></strong>
+                                        <strong>Received Date: <p t-field="o.date_received"/></strong>
+                                        <strong>Planted Date: <p t-field="o.date_planted"/></strong>
+                                    </div>
+                                    <div class="col-xs-5" t-if="o.state == 'done'">
+                                        <strong>Normal :<p t-field="o.qty_normal"/></strong>
+                                        <strong>Abnormal :<p t-field="o.qty_abnormal"/></strong>
+                                        <strong>Quantity received:<p t-field="o.qty_received"/></strong>
+                                    </div>
+                                    <div class="col -xs- 3" t-if="o.state == 'done'">
+                                        <strong>Picking :</strong>
+                                        <p t-field="o.picking_id"/>
+                                        <strong>Culling Location :</strong>
+                                        <p t-field="o.culling_location_id"/>
+                                    </div>
+                                </div>
                 </div>
             </t>
         </template>
