--- a/estate_nursery/views/batch_report.xml
+++ b/estate_nursery/views/batch_report.xml
@@ -5,27 +5,57 @@
         <template id="report_batch_document">
             <t t-call="report.external_layout">
                 <div class="page">
-                        <h2 colors="black" >
-                            <span t-if="o.state == 'done'">Batch Information</span>
-                        </h2>
-                                <div class="row">
-                                    <div class="col-xs-5" t-if="o.state == 'done'">
-                                        <strong>Received Date: <p t-field="o.name"/></strong>
-                                        <strong>Received Date: <p t-field="o.date_received"/></strong>
-                                        <strong>Planted Date: <p t-field="o.date_planted"/></strong>
-                                    </div>
-                                    <div class="col-xs-5" t-if="o.state == 'done'">
-                                        <strong>Normal :<p t-field="o.qty_normal"/></strong>
-                                        <strong>Abnormal :<p t-field="o.qty_abnormal"/></strong>
-                                        <strong>Quantity received:<p t-field="o.qty_received"/></strong>
-                                    </div>
-                                    <div class="col -xs- 3" t-if="o.state == 'done'">
-                                        <strong>Picking :</strong>
-                                        <p t-field="o.picking_id"/>
-                                        <strong>Culling Location :</strong>
-                                        <p t-field="o.culling_location_id"/>
-                                    </div>
-                                </div>
+                    <h2 colors="black" >
+                        <span t-if="o.state == 'done'">Batch Information</span>
+                    </h2>
+                    <div class="row">
+                        <div class="col-xs-5" t-if="o.state == 'done'">
+                            <strong>Received Date: <p t-field="o.name"/></strong>
+                            <strong>Received Date: <p t-field="o.date_received"/></strong>
+                            <strong>Planted Date: <p t-field="o.date_planted"/></strong>
+                        </div>
+                        <div class="col-xs-5" t-if="o.state == 'done'">
+                            <strong>Normal :<p t-field="o.qty_normal"/></strong>
+                            <strong>Abnormal :<p t-field="o.qty_abnormal"/></strong>
+                            <strong>Quantity received:<p t-field="o.qty_received"/></strong>
+                        </div>
+                        <div class="col -xs- 3" t-if="o.state == 'done'">
+                            <strong>Picking :</strong>
+                            <p t-field="o.picking_id"/>
+                            <strong>Culling Location :</strong>
+                            <p t-field="o.culling_location_id"/>
+                        </div>
+                    </div>
+                    <table class="table table-condensed">
+                        <thead>
+                            <tr>
+                                <th style="width:10%;">Selection Stage</th>
+                                <th style="width:10%;">Normal</th>
+                                <th style="width:10%;">Abnormal</th>
+                                <th style="width:10%;">% Normal</th>
+                                <th style="width:10%;">% Abnormal</th>
+                                <th style="width:10%;">Planted</th>
+                                <th style="width:10%;">DO</th>
+                                <th style="width:10%;">Planted Date</th>
+                                <th style="width:10%;">Information Time</th>
+                                <th style="width:10%;">Selection Date</th>
+                            </tr>
+                        </thead>
+                        <tbody class="selection_tbody">
+                            <tr t-foreach="o.selection_ids" t-as="l">
+                                <td style="width:10%;"><span t-field="l.selectionstage_id"/></td>
+                                <td style="width:10%;"><span t-field="l.qty_normal"/></td>
+                                <td style="width:10%;"><span t-field="l.qty_abnormal"/></td>
+                                <td style="width:10%;"><span t-field="l.nursery_persentagen"/></td>
+                                <td style="width:10%;"><span t-field="l.nursery_persentagea"/></td>
+                                <td style="width:10%;"><span t-field="l.qty_plant"/></td>
+                                <td style="width:10%;"><span t-field="l.qty_batch"/></td>
+                                <td style="width:10%;"><span t-field="l.date_plant"/></td>
+                                <td style="width:10%;"><span t-field="l.nursery_information"/></td>
+                                <td style="width:10%;"><span t-field="l.selection_date"/></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </t>
         </template>
