--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -270,11 +270,17 @@
         </record>
 
         <!-- MENU -->
-        <menuitem id="nursery_seed_selection" name="Selection" parent="estate_nursery_menu"
+        <menuitem id="nursery_seed_selection"
+                  name="Selection"
+                  parent="estate_nursery_menu"
                   action="action_list_selection" sequence="15" />
-        <menuitem id="nursery_line_selection_stage" name="Batch Selection Stage" parent="estate.estate_master_menu"
+        <menuitem id="nursery_line_selection_stage"
+                  name="Batch Selection Stage"
+                  parent="estate.estate_master_menu"
                   action="action_list_selectionstage" />
-        <menuitem id="nursery_line_selection_cause" name="Batch Selection Cause" parent="estate.estate_master_menu"
+        <menuitem id="nursery_line_selection_cause"
+                  name="Batch Selection Cause"
+                  parent="estate.estate_master_menu"
                   action="action_list_selectioncause" />
     </data>
 </openerp>
