--- a/estate_nursery/views/report_plantation_view.xml
+++ b/estate_nursery/views/report_plantation_view.xml
@@ -6,6 +6,7 @@
             <field name="arch" type="xml">
                 <tree string="Nursery selection View">
                     <field name="names"/>
+                    <field name="report_date"/>
                 </tree>
             </field>
         </record>
@@ -15,21 +16,34 @@
             <field name="model">estate.nursery.reportplantation</field>
             <field name="arch" type="xml">
                 <form String="Nursery selection view">
+                    <sheet>
                     <group>
-                        <group >
+                        <group>
                             <field name="names"/>
                             <field name="partner_id" invisible="1"/>
                             <field name="report_date"/>
                         </group>
-                        <group >
-                           <!-- <page string="Batch">
-                                <field name="batch_ids"/>
-                            </page>
-                            <page string="Selection">
-                                <field name="selection_ids"/>
-                            </page>-->
-                        </group>
                     </group>
+                        <group>
+                            <notebook>
+                                <page string="Selection">
+                                    <tree>
+                                    <field name="selection_ids"
+                                       context="{'tree_view_ref' : 'estate_nursery.view_tree_selection_nursery'
+                                       }"/>
+                                    </tree>
+                                </page>
+                                <page string="Batch ">
+                                    <tree>
+                                        <field name="batch_ids"
+                                            context="{'tree_view_ref' : 'estate_nursery.view_batch_tree'
+                                            ,}"/>
+                                    </tree>
+                                </page>
+                            </notebook>
+                        </group>
+
+                    </sheet>
                 </form>
             </field>
         </record>
