[ADD] estate_nursery : fix bug add item, add kanban view in selection

--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -238,7 +238,7 @@
                                     <page string="Selection Line">
                                         <tree>
                                             <field name="selectionline_ids" attrs="{'required': [('state','=','draft')],
-                                                'readonly': [('state','!=','draft')]}"/>
+                                                'readonly': [('state','=','done')]}"/>
                                         </tree>
                                     </page>
 
